<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name" translatable="false">Acrobits DemoPhone</string>
	<string name="app_name_short">DemoPhone</string>

	<string name="camera">Camera</string>
	<string name="log_on">Start Log</string>
	<string name="log_off">Stop Log</string>
	<string name="reset">Reset SDK</string>
	<string name="call">Call</string>
	<string name="backspace">«</string>
	<string name="clear">×</string>
	<string name="hangup">Hang Up</string>
	<string name="mute">Mute</string>
	<string name="unmute">Unmute</string>
	<string name="hold">Hold</string>
	<string name="unhold">Unhold</string>
	<string name="answer">Answer</string>
	<string name="reject">Reject</string>
	<string name="bns">BNS</string>
	<string name="aec">AEC</string>
	<string name="agc">AGC</string>
	<string name="push_test">Push test</string>
	<string name="exit_app">Exit</string>

	<string name="registration_state">State:</string>
	<string name="registration_number">Number:</string>
	<string name="call_state">Call state:</string>
	<string name="contact">Contact:</string>
	<string name="route">Route:</string>
	<string name="packet_loss">Packet loss:</string>
	<string name="jitter">Jitter:</string>
	<string name="na">N/A</string>

	<string name="on_hold">On Hold</string>

	<string name="notification_call_incoming">Incoming call</string>
	<string name="dismiss">Dismiss</string>

	<string name="grant">Grant</string>
	<string name="permission_needed">Permission needed</string>
	<string name="ans_call_background_message">To answer push call when the app is in background, you have to grant %1$s the Display over other apps permission.</string>
</resources>
