<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000">

    <LinearLayout
        android:id="@+id/call_screen_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/registration_state"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/registration_state"
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/registration_number"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/registration_number"
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"/>
                </LinearLayout>
            </LinearLayout>
    
            <Button
                android:id="@+id/log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/number"
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"/>

            <Button
                android:id="@+id/backspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backspace"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"/>

            <Button
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/speaker"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/mute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mute"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/call_state"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/call_state"
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/contact"
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/route"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/route"
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/packet_loss"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/packet_loss"
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:text="@string/na"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jitter"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <TextView
                        android:id="@+id/jitter"
                        android:background="@color/semi"
                        android:textColor="@android:color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:text="@string/na"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hold"/>

            <Button
                android:id="@+id/hangup"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hangup"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/answer"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/answer"/>

            <Button
                android:id="@+id/reject"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reject"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/push_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/push_test"/>

            <Button
                android:id="@+id/exit_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit_app"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dtmf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="1"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="2"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="3"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="4"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="5"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="7"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="8"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="9"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="0"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="*"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:tag="#"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/asset_request_example"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Example Image"
            android:padding="48dp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</FrameLayout>
